<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name = "model"
            type = "com.alidoran.mvvm_hilt_room_retro_test.model.Movie"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.InsertMovieFragment">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:text="@={model.title}"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rank"
                android:text="@={model.rank}"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_full_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_title"
                android:text="@={model.fullTitle}"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/year"
                android:text="@={model.year}"/>

            <Button
                android:id="@+id/btn_save_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </FrameLayout>
</layout>